[DOCS 7045] Alfresco Content Services 7.3 Install with Ansible updates (#912)
* [DOCS-7045] Content Services Ansible updates

* [DOCS-7045] Ansible intall edits

* [DOCS-7045] Ansible OS  edits

* [DOCS-7045] Ansible minor formatting edits

* [DOCS-7045] Updates and removal of 6.2

* Update content-services/latest/install/ansible.md

Co-authored-by: Alex Chapellon <alexandre.Chapellon@hyland.com>

* Update content-services/latest/install/ansible.md

Co-authored-by: Alex Chapellon <alexandre.Chapellon@hyland.com>

* Update content-services/latest/install/ansible.md

Co-authored-by: Alex Chapellon <alexandre.Chapellon@hyland.com>

* [DOCS-7045] Community OS and components tables updated

* [DOCS-7045] UA review - minor fixes

* [DOCS-7045] UA review - final fix

---------

Co-authored-by: Alex Chapellon <alexandre.Chapellon@hyland.com>
Co-authored-by: Adelaide Nxumalo <27953420+anxumalo@users.noreply.github.com>